sonarqube-with-rds-ingress/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: <Desired_Namespace>

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-deployment
  namespace: <desired-ns>
  labels:
    app: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      serviceAccountName: <desired-sa>  # Ensure your ServiceAccount exists
      securityContext:
        fsGroup: 1000  # Needed for EFS write access, similar to Jenkins
      containers:
        - name: sonarqube
          image: sonarqube:lts  # Use the appropriate version
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: "/opt/sonarqube/data"
              name: sonarqube-data
          resources:
            requests:
              memory: "2Gi"
              cpu : "1000m"
            limits:
              memory: "3Gi"
              cpu: "1500m"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: sonarqube-pvc-efs

---

apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: <desired-ns>
  labels:
    app: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
