sonarqube-with-rds-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: <desired-ns>
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: external-nginx
  rules:
    - host: sonar.domain.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-service
                port:
                  number: 9000
  tls:
    - hosts:
        - sonar.domain.net
      secretName: sonarqube-domain-net-tls  # Your TLS secret
